Resources/public/src/scss/c4gLoader.scss
/*
 * This file is part of con4gis, the gis-kit for Contao CMS.
 * @package con4gis
 * @version 8
 * @author con4gis contributors (see "authors.txt")
 * @license LGPL-3.0-or-later
 * @copyright (c) 2010-2021, by Küstenschmiede GmbH Software & Design
 * @link https://www.con4gis.org
 */

.c4gLoader {
    width: 34px;
    height: 34px;
    line-height: 34px;
    margin: 11px auto;
    position: absolute;
    right: 5%;
    top: 5%;
    box-sizing: border-box;
    text-align: center;
    z-index: 0;
    text-transform: uppercase;
    -o-text-transform: uppercase;
    -ms-text-transform: uppercase;
    -webkit-text-transform: uppercase;
    -moz-text-transform: uppercase;
}

.c4gLoader:before,
.c4gLoader:after {
    opacity: 0;
    box-sizing: border-box;
    -o-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    content: "\0020";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 22px;
    border: 1px solid rgba(45, 63, 81, 0.79);
    box-shadow: 0 0 11px rgba(45, 63, 81, 0.98), inset 0 0 11px rgba(45, 63, 81, 0.92);
    -o-box-shadow: 0 0 11px rgba(45, 63, 81, 0.98), inset 0 0 11px rgba(45, 63, 81, 0.92);
    -ms-box-shadow: 0 0 11px rgba(45, 63, 81, 0.98), inset 0 0 11px rgba(45, 63, 81, 0.92);
    -webkit-box-shadow: 0 0 11px rgba(45, 63, 81, 0.98), inset 0 0 11px rgba(45, 63, 81, 0.92);
    -moz-box-shadow: 0 0 11px rgba(45, 63, 81, 0.98), inset 0 0 11px rgba(45, 63, 81, 0.92);
}

.c4gLoader:after {
    z-index: 1;
    animation: cssload-gogoloader 1.9s infinite 0.95s;
    -o-animation: cssload-gogoloader 1.9s infinite 0.95s;
    -ms-animation: cssload-gogoloader 1.9s infinite 0.95s;
    -webkit-animation: cssload-gogoloader 1.9s infinite 0.95s;
    -moz-animation: cssload-gogoloader 1.9s infinite 0.95s;
}

.c4gLoader:before {
    z-index: 2;
    animation: cssload-gogoloader 1.9s infinite;
    -o-animation: cssload-gogoloader 1.9s infinite;
    -ms-animation: cssload-gogoloader 1.9s infinite;
    -webkit-animation: cssload-gogoloader 1.9s infinite;
    -moz-animation: cssload-gogoloader 1.9s infinite;
}



@keyframes cssload-gogoloader {
    0% {
        transform: scale(0);
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        transform: scale(1);
        opacity: 0;
    }
}

@-o-keyframes cssload-gogoloader {
    0% {
        -o-transform: scale(0);
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        -o-transform: scale(1);
        opacity: 0;
    }
}

@-ms-keyframes cssload-gogoloader {
    0% {
        -ms-transform: scale(0);
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        -ms-transform: scale(1);
        opacity: 0;
    }
}

@-webkit-keyframes cssload-gogoloader {
    0% {
        -webkit-transform: scale(0);
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        -webkit-transform: scale(1);
        opacity: 0;
    }
}

@-moz-keyframes cssload-gogoloader {
    0% {
        -moz-transform: scale(0);
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        -moz-transform: scale(1);
        opacity: 0;
    }
}

